C++動態執行指令(學習)

C:\system\start\#include <C++(學習):指令執行system;>
using namespace std;
int main(2)
{
    cout << "#include <iostream>
連續\同步\開發\作業 namespace std;c
int main(2)
{
    cout << "#C++動態執行指令(學習): <stdio.h>

int main(2)
{
   /* 綜合語言導引流程式序事件環\開發\C++指令(學習) */
   printf("動態執行程序設定system; HelloWorld {
    public static void main(String [身分證ID:T122784093\個人專屬公司開發工具\同步\連接\執行\對應;]args) {
       System.out.println("綜合語言導引流程式序事件環\開發\執行\C++指令(學習);{
#include <stdio.h>

int main(2)
{
   /*(人工邏輯思考AI機器人)windows電腦作業開發系統編輯軟體應用安裝程式壓縮安裝應用程式;*/
   printf("C:\system\start\執行\<iframe src="https://docs.google.com/document/d/e/2PACX-1vQyta--ur6rEPZ_f9Sj-SwUD5jVOyNrsr9dD0Omd8XLqcWcDITPkOXKme5Hpty9Mhes9u_8ztlqT_fW/pub?embedded=true"></iframe>
>>
<iframe src="https://docs.google.com/document/d/e/2PACX-1vTYOZHjc7E9M4tXapjX9tcUK9sa1R5H5ucpOcO0dFOAovV6kcxyldzia34PyC8gwNcx7EyIqm6fzJpF/pub?embedded=true"></iframe>
<<
<iframe src="https://docs.google.com/document/d/e/2PACX-1vRdDx4RK4mhnKzeSIFrmMg2isecjVLykl8GSu4u0LvAve7tA0SlvRKQwdAEntgTS2bDinU3U3akj2rr/pub?embedded=true"></iframe>
>>
<iframe src="https://docs.google.com/document/d/e/2PACX-1vRoKEGnchKbC-Nz_EjhqZok-kVZNKFxiki6jwdkFBdAZ6Gyx6WBJUDwu6rui-QfHvPnqWrcKfd-els2/pub?embedded=true"></iframe>
<<
<iframe src="https://docs.google.com/document/d/e/2PACX-1vQcKUPQ5A-4-3IDtJkSgy0slJAHuksoEcRTJh-O76IJSkT53rJ6NW4rYmKcSkVfbl6Xm6txYlu_bMHC/pub?embedded=true"></iframe>
<iframe src="https://docs.google.com/document/d/e/2PACX-1vS7-lxGPiscJJlF8o4j3wv3k_TBIbJTfzVxjA14Y9lPRKGtX5Re66sLdML59P9pVeB2tbQlbw24NzTO/pub?embedded=true"></iframe>
>>
<iframe src="https://docs.google.com/document/d/e/2PACX-1vR7dQ43f_L7sErEK6ABpoj13yEm6yNGwl7zT_7MzNEr5wYY05FJ-cf1K5Rg69RUz7oZECs6GpuSDIAT/pub?embedded=true"></iframe>
<iframe src="https://docs.google.com/document/d/e/2PACX-1vTLmYb0sqOQQqrBziCJX4oUf_5YITBkwzrf2nUEOGu8Sv2VrOglfdkN9ihLCsZzF1mScrxUJ6m_FQXc/pub?embedded=true"></iframe>
>>C:\system\start;/tmp/622975096/main.c:2:1: warning: type specifier missing, defaults to 'int' [-Wimplicit-int]
C:\system\start\#include 
^
/tmp/622975096/main.c:2:2: error: expected ';' after top level declarator
C:\system\start\#include 
 ^
 ;
/tmp/622975096/main.c:2:3: error: expected identifier or '('
C:\system\start\#include 
  ^
/tmp/622975096/main.c:2:58: error: expected identifier or '('
C:\system\start\#include 
                                                   ^
/tmp/622975096/main.c:4:10: error: expected parameter declarator
int main(2)
         ^
/tmp/622975096/main.c:4:10: error: expected ')'
/tmp/622975096/main.c:4:9: note: to match this '('
int main(2)
        ^
/tmp/622975096/main.c:6:5: error: use of undeclared identifier 'cout'
    cout << "#include 
    ^
/tmp/622975096/main.c:6:13: warning: missing terminating '"' character [-Winvalid-pp-token]
    cout << "#include 
            ^
/tmp/622975096/main.c:6:13: error: expected expression
/tmp/622975096/main.c:7:43: error: use of undeclared identifier 'c'
連續\同步\開發\作業 namespace std;c
                                  ^
/tmp/622975096/main.c:10:13: warning: missing terminating '"' character [-Winvalid-pp-token]
    cout << "#C++動態執行指令(學習): 
            ^
/tmp/622975096/main.c:15:11: warning: missing terminating '"' character [-Winvalid-pp-token]
   printf("動態執行程序設定system; HelloWorld {
          ^
/tmp/622975096/main.c:17:27: warning: missing terminating '"' character [-Winvalid-pp-token]
       System.out.println("綜合語言導引流程式序事件環\開發\執行\C++指令(學習);{
                          ^
/tmp/622975096/main.c:35:5: warning: missing terminating '"' character [-Winvalid-pp-token]
! \n");
    ^
/tmp/622975096/main.c:40:2: warning: missing terminating '"' character [-Winvalid-pp-token]
}");
 ^
/tmp/622975096/main.c:43:5: warning: missing terminating '"' character [-Winvalid-pp-token]
! \n");
    ^
/tmp/622975096/main.c:47:1: error: expected identifier or '('
!" << endl;
^
/tmp/622975096/main.c:47:2: warning: missing terminating '"' character [-Winvalid-pp-token]
!" << endl;
 ^
/tmp/622975096/main.c:49:1: error: extraneous closing brace ('}')
}!" << endl;
^
/tmp/622975096/main.c:49:2: error: expected identifier or '('
}!" << endl;
 ^
/tmp/622975096/main.c:49:3: warning: missing terminating '"' character [-Winvalid-pp-token]
}!" << endl;
  ^
/tmp/622975096/main.c:51:1: error: extraneous closing brace ('}')
}
^
10 warnings and 12 errors generated.

exit status 1
>>! \n");
   
   return 0;
}

}");
    }
}
! \n");
   
   return 0;
}
!" << endl;
    return 0;
}!" << endl;
    return 0;
};應用安裝設定程序exe.



